# crosss_sel_bol

./: .databrickscfg  .flake8  .gitignore  .pre-commit-config.yaml  README.md  benchmarking_databricks.py  benchmarking_databricks_unified.py  benchmarking_improved.py  config.yaml  mlflow.yaml  mypy.ini  pyproject.toml  requirements.txt  run_pipeline.py  setup.py  test_execution.py  test_scraping.py
.github/workflows/: ci.yml
KPI_BI/: geospatial_temporal_analysis.py  power_bi_export.py  tables_relationships.md
config/: config.py
crosss_sel_bol/: .gitignore  .isort.cfg  pyproject.toml  requirements.txt  setup.py
crosss_sel_bol/config/: config.py
crosss_sel_bol/notebooks/01_ingestao_dados/: 01_carregamento_dados.py
crosss_sel_bol/tests/: test_recommender.py
notebooks/: 00_setup_cluster.py  01_main_pipeline.py
notebooks/01_ingestao_dados/: 01_carregamento_dados.py
notebooks/02_engenharia_features/: 01_features.py
notebooks/03_recomendacoes/: 01_geracao_recomendacoes.py
src/: association_rules.py  config.py  data_processing.py  logger_config.py  market_basket.py  model_training.py
src/analysis/: similarity.py
src/data/: processor.py
src/email/: send_email.py
src/export/: export_excel.py
src/ingestion/: scraper.py
src/models/: recommender.py
src/pipeline/: main.py
src/processing/: cleaning.py  embeddings.py  price_utils.py
src/scraping/: __init__.py  bemol.py  magalu.py  magalu_scraper.py
src/utils/: helpers.py  logger.py  metrics.py  validators.py
tests/: conftest.py  test_pipeline.py  test_processor.py
(+3 files in other folders)
