[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[project]
name = "scraping_benchmarking"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing" 